@@ -57,7 +57,6 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include "configdb.hpp"
 #include "KnownGuids.hpp"
 #include "vmenu2.hpp"
-#include "codepage.hpp"
 #include "DlgGuid.hpp"
 #include "hmenu.hpp"
 #include "usermenu.hpp"
@@ -65,12 +64,10 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include "shortcuts.hpp"
 #include "plist.hpp"
 #include "hotplug.hpp"
-#include "datetime.hpp"
 #include "setcolor.hpp"
 #include "language.hpp"
 #include "plugins.hpp"
 #include "manager.hpp"
-#include "constitle.hpp"
 #include "xlat.hpp"
 #include "panelctype.hpp"
 #include "colormix.hpp"
