@@ -36,7 +36,6 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 
 #include "copy.hpp"
 #include "keys.hpp"
-#include "colors.hpp"
 #include "flink.hpp"
 #include "dialog.hpp"
 #include "ctrlobj.hpp"
@@ -46,18 +45,14 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include "treelist.hpp"
 #include "chgprior.hpp"
 #include "scantree.hpp"
-#include "constitle.hpp"
 #include "filefilter.hpp"
 #include "fileview.hpp"
-#include "TPreRedrawFunc.hpp"
 #include "syslog.hpp"
-#include "TaskBar.hpp"
 #include "cddrv.hpp"
 #include "interf.hpp"
 #include "keyboard.hpp"
 #include "colormix.hpp"
 #include "message.hpp"
-#include "config.hpp"
 #include "stddlg.hpp"
 #include "fileattr.hpp"
 #include "datetime.hpp"
@@ -68,10 +63,8 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include "strmix.hpp"
 #include "panelmix.hpp"
 #include "processname.hpp"
-#include "mix.hpp"
 #include "DlgGuid.hpp"
 #include "console.hpp"
-#include "wakeful.hpp"
 #include "language.hpp"
 #include "manager.hpp"
 #include "copy_progress.hpp"
