@@ -37,10 +37,8 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include "delete.hpp"
 #include "flink.hpp"
 #include "chgprior.hpp"
-#include "filepanels.hpp"
 #include "scantree.hpp"
 #include "treelist.hpp"
-#include "manager.hpp"
 #include "constitle.hpp"
 #include "TPreRedrawFunc.hpp"
 #include "TaskBar.hpp"
