@@ -40,7 +40,6 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include "interf.hpp"
 #include "config.hpp"
 #include "keys.hpp"
-#include "scrbuf.hpp"
 #include "help.hpp"
 
 desktop::desktop(private_tag)
