@@ -48,7 +48,6 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include "FarDlgBuilder.hpp"
 #include "clipboard.hpp"
 #include "language.hpp"
-#include "constitle.hpp"
 #include "strmix.hpp"
 
 static string FormatErrorString(bool Nt, DWORD Code)
