@@ -42,13 +42,11 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include "filepanels.hpp"
 #include "help.hpp"
 #include "viewer.hpp"
-#include "cmdline.hpp"
 #include "interf.hpp"
 #include "execute.hpp"
 #include "dirinfo.hpp"
 #include "pathmix.hpp"
 #include "mix.hpp"
-#include "constitle.hpp"
 #include "colormix.hpp"
 #include "language.hpp"
 #include "keybar.hpp"
