@@ -44,10 +44,8 @@ THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 #include "preservelongname.hpp"
 #include "ctrlobj.hpp"
 #include "manager.hpp"
-#include "constitle.hpp"
 #include "message.hpp"
 #include "usermenu.hpp"
-#include "filetype.hpp"
 #include "fnparce.hpp"
 #include "pathmix.hpp"
 #include "strmix.hpp"
