@@ -1,4 +1,12 @@
-﻿drkns 10.05.2016 22:45:32 +0200 - build 4669
+﻿drkns 11.05.2016 23:59:21 +0200 - build 4670
+
+1. Уточнение обработки DM_GETDIALOGINFО.
+
+2. Warnings.
+
+3. Убраны неиспользуемые #include.
+
+drkns 10.05.2016 22:45:32 +0200 - build 4669
 
 1. Немного переделан способ вывода прогресса копирования.
    По идее, должны исправиться все существующие баги с прорисовкой.
